Add ellipsize scenario

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Autosizing Pitfalls</string>
+
+    <string name="long_sentence">This sentence won\'t fit</string>
 </resources>
