Add word break scenario (commented out)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_name">Autosizing Pitfalls</string>
 
     <string name="long_sentence">This sentence won\'t fit</string>
+    <string name="magnanimous">magnanimous</string>
 </resources>
